Enhance/expand/rename aid_delay
