# swagger/swagger.yaml
@@ -671,11 +671,11 @@ components:
           type: string
           description: Natural language, plain text description of decision-impacting environmental factors
           example: Injuries triggered by an IED detonation.  Helicopter Evac expected in one hour for up to three casualties.
-        aid_delay:
+        aid:
           type: array
-          description: A list of evacuation opportunities
+          description: A list of available forms of aid
           items:
-            $ref: "#/components/schemas/AidDelay"
+            $ref: "#/components/schemas/Aid"
         movement_restriction:
           $ref: "#/components/schemas/MovementRestrictionEnum"
         sound_restriction:
@@ -691,26 +691,38 @@ components:
         city_infrastructure:
           type: string
           description: Refers to building/city infrastructure that should be noted and known (safe house, etc.)
-    AidDelay:
+    Aid:
       required:
         - id
         - delay
       type: object
-      description: Properties related to CASEVAC or MEDEVAC
+      description: "Properties related to evacuation, available hospitals, or other forms of aid"
       properties:
         id:
           type: string
-          description: An identifier for the evacuation opportunity, unique within the scene
+          description: "An identifier for the aid opportunity, unique within the scene"
         delay:
           type: number
           format: float
-          description: CASEVAC or MEDEVAC timer, in minutes
-          minimum: 1.0
+          description: "Time until aid is available, in minutes; 0 means ready now"
+          minimum: 0
         type:
           $ref: "#/components/schemas/AidTypeEnum"
+        level:
+          type: integer
+          description: >
+            Refers to the kinds of resources/capabilities available in a trauma center; Level 1 has more resources than Level 5.
+            See [amtrauma.org](https://www.amtrauma.org/page/traumalevels/)
+          minimum: 1
+          maximum: 5
+        patients_treated:
+          type: array
+          description: "A list of types of patients that can be helped; if omitted, then no restrictions or restrictions are irrelevant"
+          items:
+            $ref: "#/components/schemas/MilitaryDispositionEnum"
         max_transport:
           type: integer
-          description: Maximum number of casualties that can be transported
+          description: Maximum number of casualties that can be accommodated
           minimum: 1
     ThreatState:
       required:
@@ -749,7 +761,7 @@ components:
         - unstructured
         - type
       type: object
-      description: an unit of structured communication from scenario to ADM
+      description: a unit of structured communication from scenario to ADM
       properties:
         unstructured:
           type: string
@@ -771,12 +783,12 @@ components:
           items:
             description: >
               string paths within the `State` object, in which indexed lists are context-sensitive:
-              for an aid_delay or a character, it's the id;
+              for an aid or a character, it's the id;
               for a supply, it's the type;
               for a threat, it's the threat_type;
               for an injury, it's the location
             type: string
-            example: environment.decision_environment.aid_delay[civilian_facility].max_transport
+            example: environment.decision_environment.aid[civilian_facility].max_transport
     Supplies:
       required:
         - quantity
@@ -1462,12 +1474,14 @@ components:
         - maroon
     AidTypeEnum:
       type: string
-      description: Means of evacuation
+      description: Type of aid
       enum:
-        - air
-        - ground
-        - water
-        - unknown
+        - local military
+        - local non-military
+        - air evac
+        - ground evac
+        - water evac
+        - unknown evac
     ThreatTypeEnum:
       type: string
       description: the type or nature of the threat
