# swagger_server/models/message_type_enum.py
@@ -9,7 +9,7 @@ from swagger_server.models.base_model_ import Model
 from swagger_server import util
 
 
-class AidTypeEnum(Model):
+class MessageTypeEnum(Model):
     """NOTE: This class is auto generated by the swagger code generator program.
 
     Do not edit the class manually.
@@ -18,14 +18,15 @@ class AidTypeEnum(Model):
     """
     allowed enum values
     """
-    LOCAL_MILITARY = "local military"
-    LOCAL_NON_MILITARY = "local non-military"
-    AIR_EVAC = "air evac"
-    GROUND_EVAC = "ground evac"
-    WATER_EVAC = "water evac"
-    UNKNOWN_EVAC = "unknown evac"
+    ALLOW = "allow"
+    ASK = "ask"
+    DELEGATE = "delegate"
+    DENY = "deny"
+    RECOMMEND = "recommend"
+    WAIT = "wait"
+    TBD = "tbd"
     def __init__(self):  # noqa: E501
-        """AidTypeEnum - a model defined in Swagger
+        """MessageTypeEnum - a model defined in Swagger
 
         """
         self.swagger_types = {
@@ -35,12 +36,12 @@ class AidTypeEnum(Model):
         }
 
     @classmethod
-    def from_dict(cls, dikt) -> 'AidTypeEnum':
+    def from_dict(cls, dikt) -> 'MessageTypeEnum':
         """Returns the dict as a model
 
         :param dikt: A dict.
         :type: dict
-        :return: The AidTypeEnum of this AidTypeEnum.  # noqa: E501
-        :rtype: AidTypeEnum
+        :return: The MessageTypeEnum of this MessageTypeEnum.  # noqa: E501
+        :rtype: MessageTypeEnum
         """
         return util.deserialize_model(dikt, cls)
